armor-yml-files/svc.yml
kind: Service
apiVersion: v1
metadata:
  namespace: ayush
  name: ayush-cloud-armor
  annotations:
    beta.cloud.google.com/backend-config: '{"ports": {"http":"ayush-cloud-armor"}}'
spec:
  selector:
    app: nginx
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 80
